# obs-airplay-receiver

./: CMakeLists.txt  README.md  install.bat  installer.iss  uninstall.bat
.github/workflows/: build.yml
src/: airplay-source.c  audio-decoder.c  audio-decoder.h
